Fixed a minor spacing issue

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -41,10 +41,11 @@ td, th {
   font-size: 1em;
 }
 
-/*On phone screens we need to alter the padding */
+/*On phone screens we need to alter the padding. It just looks bad on phone with ems since we go beyond the width of the screen */
 @media screen and (max-width: 450px) {
   td, th {
-    padding-left: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
     font-size: 1em;
   }
 }
